--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -3,11 +3,14 @@
 <table>
     <tr>
         <th>Item</th>
+        <th></th>
+        <th></th>
     </tr>
     {% for task in tasks %} 
     <tr>
         <td>{{ task.title }}</td>
         <td><a href="{% url 'base:detail' task.id %}">View</a></td>
+        <td><a href="{% url 'base:update' task.id %}">Edit</a></td>
     </tr>
     {% empty %} 
     <h3>No items in list</h3>
