--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,4 +1,7 @@
 <h1>My to do list</h1>
+<div>
+    <a href="{% url 'base:logout' %}">Logout</a>
+</div>
 <a href="{% url 'base:create' %}">Add Task</a>
 <table>
     <tr>
