--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -7,3 +7,5 @@
     </table>
     <input type="submit" value="Login">
 </form>
+
+<p>Don't have an account? <a href="{% url 'base:register' %}">Register here.</a></p>
